--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="colorPrimary">#F00</color>
     <color name="colorPrimaryDark">#E00</color>
     <color name="colorAccent">#CBD</color>
+    <color name="ldrawer_color">#ffffff</color>
+    <color name="drawer_arrow_second_color">#303f9f</color>
 </resources>
