--- a/app/src/main/res/menu/activity_main_left_menu.xml
+++ b/app/src/main/res/menu/activity_main_left_menu.xml
@@ -18,7 +18,8 @@
 
         <menu>
             <item
-                android:title="@string/menu_3"
+                android:id="@+id/kotlin"
+                android:title="@string/kotlin"
                 android:icon="@mipmap/left_icon_menu"/>
 
             <item
