--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,7 +8,6 @@
     <dimen name="card_corner">16dp</dimen>
 
 
-
     <dimen name="ldrawer_drawableSize">50dp</dimen>
     <dimen name="ldrawer_barSize">18dp</dimen>
     <dimen name="ldrawer_topBottomBarArrowSize">11dp</dimen>
@@ -16,4 +15,5 @@
     <dimen name="ldrawer_gapBetweenBars">3dp</dimen>
     <dimen name="ldrawer_middleBarArrowSize">16dp</dimen>
     <dimen name="navdrawer_width">260dp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
 </resources>
