--- a/app/src/main/res/layout/activity_ssq_hisotry.xml
+++ b/app/src/main/res/layout/activity_ssq_hisotry.xml
@@ -1,45 +1,70 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <RelativeLayout
-        android:id="@+id/recommend"
+    <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingBottom="10dp"
-        android:paddingLeft="15dp"
-        android:paddingRight="15dp"
-        android:paddingTop="10dp">
+        android:fitsSystemWindows="true">
+   <!--     <android.support.design.widget.CollapsingToolbarLayout
+            android:id="@+id/ct"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:contentScrim="#fff"
+            app:expandedTitleMarginStart="48dp"
+            app:layout_scrollFlags="scroll|exitUntilCollapsed">-->
 
-        <TextView
-            android:id="@+id/tv_recommend_title"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="14sp"
-            android:textStyle="bold" />
-        <ScrollView
-            android:layout_width="match_parent"
-            android:layout_below="@+id/tv_recommend_title"
-            android:layout_height="wrap_content">
-            <TextView
-                android:id="@+id/tv_recommend"
-                android:layout_marginTop="10dp"
+            <RelativeLayout
+                android:id="@+id/recommend"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/tv_recommend_title"
-                android:textSize="18sp"/>
-        </ScrollView>
+                android:background="#fff"
+                android:paddingBottom="10dp"
+                android:paddingLeft="15dp"
+                android:paddingRight="15dp"
+                app:layout_scrollFlags="scroll|enterAlwaysCollapsed"
+                android:paddingTop="10dp">
 
+                <TextView
+                    android:id="@+id/tv_recommend_title"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="14sp"
+                    android:textStyle="bold" />
 
-    </RelativeLayout>
+                <ScrollView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/tv_recommend_title">
 
-    <ListView
-        android:id="@+id/lv"
+                    <TextView
+                        android:id="@+id/tv_recommend"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/tv_recommend_title"
+                        android:layout_marginTop="10dp"
+                        android:textSize="18sp" />
+                </ScrollView>
+            </RelativeLayout>
+        <!--</android.support.design.widget.CollapsingToolbarLayout>-->
+    </android.support.design.widget.AppBarLayout>
+
+    <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingLeft="15dp"
-        android:paddingRight="15dp"
-        android:scrollbars="none"></ListView>
-</LinearLayout>
+        android:orientation="vertical"
+        android:background="#fff"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/lv"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:paddingLeft="15dp"
+            android:paddingRight="15dp"
+            android:scrollbars="none"/>
+    </android.support.constraint.ConstraintLayout>
+</android.support.design.widget.CoordinatorLayout>
