--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/drawer_layout"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+
     tools:context="com.stuart.stuartapp.MainActivity">
 
     <RelativeLayout
@@ -15,10 +16,25 @@
         <android.support.v4.view.ViewPager
             android:layout_width="match_parent"
             android:id="@+id/vp"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent">
 
         </android.support.v4.view.ViewPager>
 
+
+        <com.stuart.stuartapp.widget.PagerPointView
+            android:id="@+id/pagerPoint"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="100dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@android:color/transparent"
+            android:orientation="horizontal"
+            android:paddingBottom="5dp"
+            android:paddingTop="5dp"
+            app:selectPosition="2"
+            app:selectedIndicatorColor="#000"
+            app:slideCount="5"
+            app:unselectedIndicatorColor="#666" />
     </RelativeLayout>
 
 
