--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:stuart="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -13,7 +14,16 @@
         android:layout_height="match_parent"
         >
 
+        <com.stuart.stuartapp.widget.SlidingTabLayout
+            android:id="@+id/stl"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:background="@color/colorPrimary"
+            app:tl_indicator_corner_radius="1.5dp"
+            app:tl_indicator_height="3dp"
+            app:tl_indicator_width="10dp"/>
         <android.support.v4.view.ViewPager
+            android:layout_below="@+id/stl"
             android:layout_width="match_parent"
             android:id="@+id/vp"
             android:layout_height="match_parent">
@@ -22,6 +32,7 @@
 
 
         <com.stuart.stuartapp.widget.PagerPointView
+            android:visibility="gone"
             android:id="@+id/pagerPoint"
             android:layout_alignParentBottom="true"
             android:layout_marginBottom="100dp"
