--- a/app/src/main/res/layout/activity_weather.xml
+++ b/app/src/main/res/layout/activity_weather.xml
@@ -20,6 +20,7 @@
             android:layout_marginLeft="10dp"
             android:layout_centerVertical="true"
             android:layout_height="30dp"
+            android:tint="@color/colorPrimary"
             android:src="@drawable/delete_city"/>
 
         <ImageView
@@ -30,6 +31,7 @@
             android:layout_marginLeft="10dp"
             android:layout_centerVertical="true"
             android:layout_height="30dp"
+            android:tint="@color/colorPrimary"
             android:src="@drawable/refresh_weather"/>
         <LinearLayout
             android:orientation="horizontal"
@@ -44,6 +46,7 @@
             android:layout_marginRight="10dp"
             android:layout_centerVertical="true"
             android:layout_height="30dp"
+            android:tint="@color/colorPrimary"
             android:src="@drawable/add_city"/>
     </RelativeLayout>
 </LinearLayout>
