--- a/app/src/main/res/xml/accessibility.xml
+++ b/app/src/main/res/xml/accessibility.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <accessibility-service xmlns:android="http://schemas.android.com/apk/res/android"
 
-    android:accessibilityEventTypes="typeNotificationStateChanged|typeWindowStateChanged|typeWindowContentChanged"
+    android:accessibilityEventTypes="typeAllMask"
     android:accessibilityFeedbackType="feedbackGeneric"
     android:accessibilityFlags="flagDefault"
     android:canRetrieveWindowContent="true"
     android:description="XXXX"
     android:notificationTimeout="100"
-    android:packageNames="com.stuart.stuartapp"
+    android:packageNames="com.android.settings"
     />
+    <!--android:packageNames="com.stuart.stuartapp"-->
     <!--android:accessibilityEventTypes="typeAllMask"-->
-    <!--android:packageNames="com.tencent.mm" -->
+    <!-- -->
