--- a/app/src/main/res/drawable/weather_indicator_select.xml
+++ b/app/src/main/res/drawable/weather_indicator_select.xml
@@ -10,7 +10,7 @@
         android:right="2dp"
         android:bottom="1dp" />
     <solid
-        android:color="#184fda" />
+        android:color="@color/colorPrimary" />
     <stroke
         android:width="1dp"
         android:color="@android:color/white" />
