--- a/app/src/main/res/layout/item_index_weather.xml
+++ b/app/src/main/res/layout/item_index_weather.xml
@@ -22,7 +22,7 @@
             android:layout_gravity="center_vertical"
             android:layout_marginLeft="10dp"
             android:id="@+id/index_value"
-            android:textColor="#af41ee"
+            android:textColor="@color/colorPrimary"
             android:textSize="16sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
@@ -43,6 +43,6 @@
         android:layout_width="match_parent"
         android:layout_height="1px"
         android:layout_alignLeft="@+id/weather_container"
-        android:background="#FF0000FF"
+        android:background="@color/colorPrimary"
         android:layout_alignParentBottom="true"/>
 </RelativeLayout>
