--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#cbb5f2</color>
-    <color name="colorPrimaryDark">#bea1f2</color>
-    <color name="colorAccent">#CBD</color>
+    <color name="colorPrimary">#988</color>
+    <color name="colorPrimaryDark">#98A</color><!--d2de96-->
+    <color name="colorAccent">#988</color>
+    <!--<color name="colorAccent">#CBD</color>-->
     <color name="ldrawer_color">#ffffff</color>
     <color name="drawer_arrow_second_color">#303f9f</color>
 </resources>
