--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="colorPrimary">#988</color>
     <color name="colorPrimaryDark">#98A</color><!--d2de96-->
     <color name="colorAccent">#988</color>
+    <color name="white">#fff</color>
     <!--<color name="colorAccent">#CBD</color>-->
     <color name="ldrawer_color">#ffffff</color>
     <color name="drawer_arrow_second_color">#303f9f</color>
