--- a/app/src/main/res/layout/activity_file_connect.xml
+++ b/app/src/main/res/layout/activity_file_connect.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:stuart="http://schemas.android.com/apk/res-auto"
   android:layout_width="match_parent"
+  android:orientation="vertical"
   android:layout_height="match_parent"
   >
 
@@ -14,4 +15,34 @@
     ></com.stuart.stuartapp.widget.TitleView>
 
 
-</RelativeLayout>
+  <EditText
+    android:id="@+id/path"
+    android:hint="请输入路径"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    />
+
+  <EditText
+    android:id="@+id/file"
+    android:hint="请输入文件名"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    />
+
+
+  <Button
+    android:id="@+id/btn"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_gravity="center_horizontal"
+    android:text="开始"
+    />
+
+  <Button
+    android:id="@+id/check"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_gravity="center_horizontal"
+    android:text="检查"
+    />
+</LinearLayout>
