--- a/app/src/main/res/layout/title_view.xml
+++ b/app/src/main/res/layout/title_view.xml
@@ -3,7 +3,7 @@
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="match_parent"
   android:layout_height="48dp"
-  android:background="@color/white"
+  android:background="@color/colorPrimary"
   android:paddingLeft="16dp"
   android:paddingRight="16dp"
   >
@@ -25,7 +25,7 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_centerVertical="true"
-    android:background="@drawable/back_black"
+    android:background="@drawable/back_white"
     />
 
 
